--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -19,3 +19,7 @@ RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/
 
 # [Optional] Uncomment this line to install global node packages.
 # RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g <your-package-here>" 2>&1
+
+RUN apt-get update && apt-get -y upgrade \
+		&& apt-get install -y curl wget git zsh && chsh -s $(which zsh) \
+		&& wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | zsh || true && zsh
